--- a/todulist/css/todolist.css
+++ b/todulist/css/todolist.css
@@ -247,14 +247,39 @@ section.leftbar{
     align-items: center;
 }
 .item .bottom .btn{
-    margin:0;
+     margin:0;
+     transition: all .5s;
+ }
+.item .bottom .btn:hover{
+    box-shadow: 0 0 2px #000;
+    transform:scale(1.1,1.1)
 }
 .item .bottom .addbtn{
-    background-color: #f00;
+    background-color:rgba(0, 0, 0, 0.61);
+    color: white;
+    transition: all .5s;
+    box-shadow: 0 0 2px #000;
+}
+.item .bottom .addbtn:hover{
+    box-shadow: 0 0 2px #000;
+    transform:scale(1.1,1.1)
 }
 .item .bottom .movebtn{
-    background-color: #00f;
+    background-color:rgba(0, 0, 0, 0.61);
+    color: white;
+    transition: all .5s;
+
+}
+.item .bottom .movebtn:hover{
+    box-shadow: 0 0 2px #000;
+    transform:scale(1.1,1.1)
 }
 .item .bottom .clearbtn{
-    background-color: #00f;
+    background-color:rgba(0, 0, 0, 0.61);
+    color: white;
+    transition: all .5s;
+}
+.item .bottom .clearbtn:hover{
+    box-shadow: 0 0 2px #000;
+    transform:scale(1.1,1.1)
 }
