--- a/personal/css/main.css
+++ b/personal/css/main.css
@@ -4,14 +4,14 @@
 ==================================*/
 @import url(http://fonts.useso.com/css?family=Raleway:400,700,300);
 @import url(http://fonts.useso.com/css?family=Roboto:300,700);
-@font-face {
-	font-family: 'iconfont';  /* project id 395548 */
-	src: url('//at.alicdn.com/t/font_395548_k7vq9119wvwvcxr.eot');
-	src: url('//at.alicdn.com/t/font_395548_k7vq9119wvwvcxr.eot?#iefix') format('embedded-opentype'),
-	url('//at.alicdn.com/t/font_395548_k7vq9119wvwvcxr.woff') format('woff'),
-	url('//at.alicdn.com/t/font_395548_k7vq9119wvwvcxr.ttf') format('truetype'),
-	url('//at.alicdn.com/t/font_395548_k7vq9119wvwvcxr.svg#iconfont') format('svg');
-}
+/*@font-face {*/
+	/*font-family: 'iconfont';  !* project id 395548 *!*/
+	/*src: url('//at.alicdn.com/t/font_395548_01pe5i7eq12rcnmi.eot');*/
+	/*src: url('//at.alicdn.com/t/font_395548_01pe5i7eq12rcnmi.eot?#iefix') format('embedded-opentype'),*/
+	/*url('//at.alicdn.com/t/font_395548_01pe5i7eq12rcnmi.woff') format('woff'),*/
+	/*url('//at.alicdn.com/t/font_395548_01pe5i7eq12rcnmi.ttf') format('truetype'),*/
+	/*url('//at.alicdn.com/t/font_395548_01pe5i7eq12rcnmi.svg#iconfont') format('svg');*/
+/*}*/
 
 /*=================================
 ||			2. Global 
@@ -23,7 +23,7 @@ body
 }
 .wrapper
 {
-	padding: 50px 0px 30px;
+	padding: 30px 0px 30px;
 }
 .section-title
 {
@@ -258,6 +258,7 @@ a.logo:hover
 }
 .add
 {
+	border-radius: 15px;
 	color: rgb(48, 43, 56);
 	position: absolute;
 	background: linear-gradient(to bottom, #e64e4e , #e64e6b);
@@ -321,6 +322,26 @@ a.logo:hover
 {
 	height: 100px;
 }
+#jineng{
+	padding-left: 20px;
+	width: 100%;
+	height: 200px;
+	/*background: pink;*/
+	/*list-style: none;*/
+}
+.jinengli{
+	font-size: 16px;
+	color: white;
+}
+.fontfm{
+	font-family:'iconfont';
+	font-size: 20px;
+	color: black;
+}
+.jp{
+	padding: 5px 0 ;
+
+}
 
 /*=================================
 ||			6. 关于我
@@ -344,8 +365,8 @@ a.logo:hover
 }
 .about-content {
   /*padding-left: 94px;*/
-  padding-left: 22%;
-  padding-right: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 /*=================================
@@ -766,4 +787,104 @@ ul.social-icons {
 @media (max-width: 320px){
 	
 }
-
+@keyframes grow-and-fade {
+	0% {
+		opacity: 0;
+		transform: scale(0.1) translatez(0);
+	}
+	40% {
+		opacity: 1;
+	}
+	60% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+		transform: scale(1) translatez(0);
+	}
+}
+@keyframes pulsing-fade {
+	0% {
+		opacity: 0;
+	}
+	20% {
+		opacity: 0;
+	}
+	40% {
+		opacity: 0.8;
+	}
+	60% {
+		opacity: 0;
+	}
+}
+.triangle {
+	animation: grow-and-fade 2000ms linear infinite;
+	height: 150px;
+	left: 0;
+	opacity: 0;
+	width: 150px;
+	position: absolute;
+	top: 0%;
+	transform: translatez(0);
+	transform-origin: 50% 60%;
+	will-change: opacity, transform;
+}
+.triangle-wrapper {
+	height: 150px;
+	position: relative;
+	width: 150px;
+}
+.triangle-loading {
+	animation: pulsing-fade 6000ms ease infinite;
+	color: white;
+	font-family: 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 12px;
+	font-weight: 300;
+	left: 50%;
+	letter-spacing: 8px;
+	margin-left: 4px;
+	margin-top: 10px;
+	opacity: 0;
+	position: absolute;
+	top: 100%;
+	transform: translate3d(-50%, -50%, 0);
+	text-transform: uppercase;
+}
+.triangle-svg {
+	margin-top: -20px;
+	opacity: 0.5;
+	overflow: visible;
+}
+.triangle-polygon {
+	stroke-width: 5px;
+}
+.triangle-1 {
+	animation-delay: 0ms;
+}
+.triangle-1 .triangle-polygon {
+	stroke: hotpink;
+}
+.triangle-2 {
+	animation-delay: 400ms;
+}
+.triangle-2 .triangle-polygon {
+	stroke: aqua;
+}
+.triangle-3 {
+	animation-delay: 800ms;
+}
+.triangle-3 .triangle-polygon {
+	stroke: cornflowerblue;
+}
+.triangle-4 {
+	animation-delay: 1200ms;
+}
+.triangle-4 .triangle-polygon {
+	stroke: yellow;
+}
+.triangle-5 {
+	animation-delay: 1600ms;
+}
+.triangle-5 .triangle-polygon {
+	stroke: white;
+}
